# Changeling

./: .gitignore  README.md  changeling.py  pyproject.toml
changeling/core/: branch.py  changeling.py  layers.py  learning_criteria.py  teacher.py
changeling/examples/: cifar_10.py  mnist.py
changeling/layers/: __init__.py  branch.py  changeling.py  fork_layers.py  weights.py
changeling/tests/: test_branch.py  test_changeling.py  test_fork_layers.py  test_layers.py  test_learning_criteria.py  test_lesson.py  test_lesson_and_curriculum.py  test_mnist.py  test_teacher.py
tests/: test_layers.py  test_mnist.py
